Fix syntax error: remove trailing commas in girafe() calls

--- a/shinyapp/dashboard/uj-dashboard.qmd
+++ b/shinyapp/dashboard/uj-dashboard.qmd
@@ -350,10 +350,10 @@ output$plot_ratings <- renderGirafe({
         y = NULL
       )
   
-  girafe(ggobj = ggp, 
+  girafe(ggobj = ggp,
          width_svg = 9,
-         options = list(opts_sizing(rescale = FALSE, width = 1)),
-)
+         options = list(opts_sizing(rescale = FALSE, width = 1))
+  )
 })
 
 
@@ -415,10 +415,10 @@ output$plot_critera <- renderGirafe({
                                       rel_heights = c(6, 3), align = "hv",
                                       scale = 0.9)
   
-  girafe(ggobj = combined_plot, 
+  girafe(ggobj = combined_plot,
          width_svg = 8,
-         options = list(opts_sizing(rescale = FALSE, width = 1)),
-)
+         options = list(opts_sizing(rescale = FALSE, width = 1))
+  )
 })
 
 
@@ -470,10 +470,10 @@ output$plot_comparison <- renderGirafe({
         legend.title = element_blank()
       )
   
-  girafe(ggobj = ggp, 
+  girafe(ggobj = ggp,
          width_svg = 8,
-         options = list(opts_sizing(rescale = FALSE, width = 0.9)),
-)
+         options = list(opts_sizing(rescale = FALSE, width = 0.9))
+  )
 })
 
 
